syntax = "proto3";

package io.harness.delegatesetup;

option java_multiple_files = true;
option go_package = "920_delegate_service_beans";

import "955-delegate-beans/src/main/proto/io/harness/delegate/account.proto";
import "920-delegate-service-beans/src/main/proto/io/harness/owner/owner.proto";

service DelegateSetupService {
  rpc GetDelegateGroupsCount(DelegateGroupsRequest) returns (DelegateGroupsCountResponse);
}

message DelegateGroupsRequest {
  delegate.AccountId account_id = 1;
  owner.OrgIdentifier org_id = 3;
  owner.ProjectIdentifier project_id = 4;
}

message DelegateGroupsCountResponse {
  int64 delegateGroupsCount = 1;
}